@@ -1,3 +1,9 @@
+2010-09-14  Sam Steingold  <sds@gnu.org>
+
+	* utils/modprep.lisp (parse-signature): accept :SECLASS and pass
+	it to MAKE-SIGNATURE
+	(defun-p): pass SEC to PARSE-SIGNATURE instead of ignoring it
+
 2010-09-13  Sam Steingold  <sds@gnu.org>
 
 	bundle ASDF2 as a module
